--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 nom = {version = "7.1.1", default-features = false}
+
+[dev-dependencies]
+libc-print = "0.1.16"
+
